# LTNoteBook

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  appico.aps  appico.rc  config.h  main.cpp  res.qrc  translations.qrc  wrap_tr.py
DailyQuoteManager/: DailyQuoteManager.cpp  DailyQuoteManager.h
MarkdownHighlighter/: MarkdownHighlighter.cpp  MarkdownHighlighter.h
RestartDialog/: RestartDialog.cpp  RestartDialog.h
SeparatorDelegate/: SeparatorDelegate.cpp  SeparatorDelegate.h
SmoothSwitch/: SmoothSwitch.cpp  SmoothSwitch.h
TranslationManager/: TranslationManager.cpp  TranslationManager.h
Widget/: widget.cpp  widget.h  widget.ui
i18n/: app_en.qm  app_en.ts  app_ja.qm  app_ja.ts  app_zh_CN.qm  app_zh_CN.ts
shortsetting/: shortsetting.cpp  shortsetting.h  shortsetting.ui
